--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
+    "querystring": "^0.2.0",
     "serve-favicon": "~2.3.0",
-    "supervisor": "^0.9.1"
+    "supervisor": "^0.9.1",
+    "url": "^0.11.0"
   }
 }
