--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "ejs": "^2.3.4",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
+    "faker": "^3.0.1",
     "jade": "~1.11.0",
+    "json-schema-faker": "^0.2.5",
+    "kerberos": "0.0.17",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
     "querystring": "^0.2.0",
